feat(seeder): overwrite Cofinity company data BPN and company name (#17)
Co-authored-by: Karsten Thiems <150006841+typecastcloud@users.noreply.github.com>

--- a/docker/Dockerfile-portal-migrations
+++ b/docker/Dockerfile-portal-migrations
@@ -23,6 +23,7 @@ FROM mcr.microsoft.com/dotnet/sdk:8.0-alpine-amd64 AS publish
 WORKDIR /
 COPY LICENSE NOTICE.md DEPENDENCIES /
 COPY /src/portalbackend /src/portalbackend
+COPY /src/portalbackend/PortalBackend.Migrations/Seeder/DataOverwrite/*.json /src/portalbackend/PortalBackend.Migrations/Seeder/Data
 COPY /src/framework/Framework.DBAccess /src/framework/Framework.DBAccess
 COPY /src/framework/Framework.Logging /src/framework/Framework.Logging
 COPY /src/framework/Framework.Models /src/framework/Framework.Models
