--- a/src/processes/Processes.Worker/appsettings.json
+++ b/src/processes/Processes.Worker/appsettings.json
@@ -369,8 +369,14 @@
       ]
     },
     "BpnDidResolver": {
-      "BaseAddress": "",
-      "ApiKey": ""
+      "Username": "",
+      "Password": "",
+      "ClientId": "",
+      "GrantType": "",
+      "ClientSecret": "",
+      "Scope": "",
+      "TokenAddress": "",
+      "BaseAddress": ""
     }
   },
   "Processes": {
