--- a/src/registration/Registration.Service/appsettings.json
+++ b/src/registration/Registration.Service/appsettings.json
@@ -99,5 +99,15 @@
   },
   "ApplicationCreation": {
     "UseDimWallet": false
+  },
+  "Hubspot": {
+    "BaseAddress": "",
+    "Username": "",
+    "Password": "",
+    "GrantType": "",
+    "ClientId": "",
+    "ClientSecret": "",
+    "Scope": "",
+    "TokenAddress": ""
   }
 }
