--- a/src/processes/Processes.Worker/appsettings.json
+++ b/src/processes/Processes.Worker/appsettings.json
@@ -472,7 +472,7 @@
       {
         "Name": "NewUserTemplate",
         "Setting": {
-          "Subject": "Welcome as new user to the Catena-X Network",
+          "Subject": "Welcome to Cofinity-X",
           "EmailTemplateType": "PortalNewUserWelcome"
         }
       },
@@ -486,7 +486,7 @@
       {
         "Name": "NewUserExternalIdpTemplate",
         "Setting": {
-          "Subject": "Welcome as new user to the Catena-X Network",
+          "Subject": "Welcome to Cofinity-X",
           "EmailTemplateType": "NewUserAccountExternalIdp"
         }
       },
@@ -500,14 +500,14 @@
       {
         "Name": "CredentialApproval",
         "Setting": {
-          "Subject": "Company Wallet - SSI Credential Approved",
+          "Subject": "Credential request approved",
           "EmailTemplateType": "CredentialApproval"
         }
       },
       {
         "Name": "CredentialRejected",
         "Setting": {
-          "Subject": "Company Wallet - SSI Credential Request Rejected",
+          "Subject": "Credential request declined",
           "EmailTemplateType": "CredentialRejected"
         }
       },
@@ -551,6 +551,20 @@
         "Setting": {
           "Subject": "Information: Catena-X Registration successfully submitted",
           "EmailTemplateType": "NextSteps"
+        }
+      },
+      {
+        "Name": "DeactivateManagedIdp",
+        "Setting": {
+          "Subject": "Identity provider (IdP) deactivated",
+          "EmailTemplateType": "DeactivateManagedIdp"
+        }
+      },
+      {
+        "Name": "DeleteManagedIdp",
+        "Setting": {
+          "Subject": "Identity provider (IdP) deleted",
+          "EmailTemplateType": "DeleteManagedIdp"
         }
       }
     ],
