feat(Email Template): Design & Subject changes  (#58)

--- a/src/processes/Processes.Worker/appsettings.json
+++ b/src/processes/Processes.Worker/appsettings.json
@@ -489,7 +489,7 @@
       {
         "Name": "NewUserTemplate",
         "Setting": {
-          "Subject": "Welcome as new user to the Catena-X Network",
+          "Subject": "Welcome to Cofinity-X",
           "EmailTemplateType": "PortalNewUserWelcome"
         }
       },
@@ -503,7 +503,7 @@
       {
         "Name": "NewUserExternalIdpTemplate",
         "Setting": {
-          "Subject": "Welcome as new user to the Catena-X Network",
+          "Subject": "Welcome to Cofinity-X",
           "EmailTemplateType": "NewUserAccountExternalIdp"
         }
       },
@@ -517,14 +517,14 @@
       {
         "Name": "CredentialApproval",
         "Setting": {
-          "Subject": "Company Wallet - SSI Credential Approved",
+          "Subject": "Credential request approved",
           "EmailTemplateType": "CredentialApproval"
         }
       },
       {
         "Name": "CredentialRejected",
         "Setting": {
-          "Subject": "Company Wallet - SSI Credential Request Rejected",
+          "Subject": "Credential request declined",
           "EmailTemplateType": "CredentialRejected"
         }
       },
@@ -568,6 +568,20 @@
         "Setting": {
           "Subject": "Information: Catena-X Registration successfully submitted",
           "EmailTemplateType": "NextSteps"
+        }
+      },
+      {
+        "Name": "DeactivateManagedIdp",
+        "Setting": {
+          "Subject": "Identity provider (IdP) deactivated",
+          "EmailTemplateType": "DeactivateManagedIdp"
+        }
+      },
+      {
+        "Name": "DeleteManagedIdp",
+        "Setting": {
+          "Subject": "Identity provider (IdP) deleted",
+          "EmailTemplateType": "DeleteManagedIdp"
         }
       }
     ],
