chore(partnerNetwork): Get data from partner network pool by portal backend (#61)

--- a/src/administration/Administration.Service/appsettings.json
+++ b/src/administration/Administration.Service/appsettings.json
@@ -26,6 +26,7 @@
   "Cors": {
     "AllowedOrigins": []
   },
+  "BPN_Address": "",
   "Keycloak": {
     "central": {
       "ConnectionString": "",
