--- a/src/marketplace/Services.Service/appsettings.json
+++ b/src/marketplace/Services.Service/appsettings.json
@@ -56,6 +56,9 @@
   },
   "Services": {
     "BasePortalAddress": "https://portal.example.org",
+    "DecentralIdentityManagementAuthUrl": "",
+    "IssuerDid": "",
+    "BpnDidResolverUrl": "",
     "ServiceOverviewAddress": "https://portal.example.org",
     "CatenaAdminRoles": [],
     "ServiceAccountRoles": [],
