--- a/.github/workflows/cfx_build_release.yml
+++ b/.github/workflows/cfx_build_release.yml
@@ -18,7 +18,7 @@ on:
 env:
   TARGET_REPOSITORY: portal-charts
   TARGET_BRANCH: main
-  VALUES_FILE: portal/dev/values-dev.yaml
+  VALUES_FILE: portal/dev/values.yaml
   WORKFLOW_ID: cfx-backend-version-bump.yaml
 
 concurrency:
