--- a/docs/api/apps-service.yaml
+++ b/docs/api/apps-service.yaml
@@ -2481,6 +2481,9 @@ components:
           nullable: true
         provider:
           type: string
+        providerShortName:
+          type: string
+          nullable: true
         image:
           type: string
           format: uuid
@@ -2541,6 +2544,9 @@ components:
           format: uuid
         provider:
           type: string
+        providerShortName:
+          type: string
+          nullable: true
         status:
           $ref: '#/components/schemas/OfferStatusId'
         lastChanged:
@@ -2574,6 +2580,10 @@ components:
         provider:
           type: string
           description: Provider.
+        providerShortName:
+          type: string
+          description: Provider Short Name.
+          nullable: true
         licenseType:
           $ref: '#/components/schemas/LicenseTypeId'
         price:
@@ -2616,6 +2626,10 @@ components:
         provider:
           type: string
           description: Provider of the app.
+        providerShortName:
+          type: string
+          description: Provider short name of the app.
+          nullable: true
         contactEmail:
           type: string
           description: Email address of the app's primary contact.
@@ -2760,6 +2774,10 @@ components:
         providerName:
           type: string
           description: provider name
+          nullable: true
+        providerShortName:
+          type: string
+          description: provider short name
           nullable: true
         useCase:
           type: array
@@ -3008,6 +3026,9 @@ components:
           format: uuid
         provider:
           type: string
+        providerShortName:
+          type: string
+          nullable: true
       additionalProperties: false
     ClientInfoData:
       type: object
@@ -3176,6 +3197,9 @@ components:
           nullable: true
         provider:
           type: string
+        providerShortName:
+          type: string
+          nullable: true
         status:
           $ref: '#/components/schemas/OfferStatusId'
       additionalProperties: false
@@ -3212,6 +3236,10 @@ components:
         provider:
           type: string
           description: Provider of the app.
+        providerShortName:
+          type: string
+          description: Provider short name of the app.
+          nullable: true
         useCases:
           type: array
           items:
@@ -3469,6 +3497,9 @@ components:
           nullable: true
         customer:
           type: string
+        customerShortName:
+          type: string
+          nullable: true
         bpn:
           type: string
           nullable: true
@@ -3535,6 +3566,9 @@ components:
           nullable: true
         provider:
           type: string
+        providerShortName:
+          type: string
+          nullable: true
         status:
           $ref: '#/components/schemas/OfferSubscriptionStatusId'
         subscriptionId:
@@ -3710,6 +3744,9 @@ components:
           nullable: true
         provider:
           type: string
+        providerShortName:
+          type: string
+          nullable: true
         contact:
           type: array
           items:
