--- a/docs/api/services-service.yaml
+++ b/docs/api/services-service.yaml
@@ -1628,6 +1628,9 @@ components:
           nullable: true
         provider:
           type: string
+        providerShortName:
+          type: string
+          nullable: true
         status:
           $ref: '#/components/schemas/OfferStatusId'
         lastChanged:
@@ -1697,6 +1700,9 @@ components:
           format: uuid
         companyName:
           type: string
+        companyShortName:
+          type: string
+          nullable: true
         companyUserId:
           type: string
           format: uuid
@@ -1823,6 +1829,9 @@ components:
           $ref: '#/components/schemas/OfferStatusId'
         provider:
           type: string
+        providerShortName:
+          type: string
+          nullable: true
         description:
           type: string
       additionalProperties: false
@@ -1970,6 +1979,9 @@ components:
           type: string
           format: uuid
         providerName:
+          type: string
+          nullable: true
+        providerShortName:
           type: string
           nullable: true
         useCase:
@@ -2124,6 +2136,9 @@ components:
           nullable: true
         provider:
           type: string
+        providerShortName:
+          type: string
+          nullable: true
         status:
           $ref: '#/components/schemas/OfferSubscriptionStatusId'
         subscriptionId:
@@ -2292,6 +2307,10 @@ components:
         customer:
           type: string
           description: Name of the company subscribing the offer
+        customerShortName:
+          type: string
+          description: Short name of the company subscribing the offer
+          nullable: true
         bpn:
           type: string
           description: 'When called from /provider bpn of the company subscribing the offer, otherwise the provider company''s bpn'
@@ -2335,6 +2354,10 @@ components:
         provider:
           type: string
           description: Provider of the service.
+        providerShortName:
+          type: string
+          description: Short name of provider of the service.
+          nullable: true
         descriptions:
           type: array
           items:
@@ -2443,6 +2466,10 @@ components:
         provider:
           type: string
           description: Provider of the app.
+        providerShortName:
+          type: string
+          description: Provider short name of the app.
+          nullable: true
         leadPictureId:
           type: string
           description: Lead picture Id.
@@ -2586,6 +2613,9 @@ components:
           nullable: true
         provider:
           type: string
+        providerShortName:
+          type: string
+          nullable: true
         leadPictureId:
           type: string
           format: uuid
@@ -2816,6 +2846,9 @@ components:
           nullable: true
         provider:
           type: string
+        providerShortName:
+          type: string
+          nullable: true
         contact:
           type: array
           items:
