feat: add handling for outdated legal person in connector self-description process PR2 (#1317)
* Activate connecter without self-description if legal person is outdated
Refs: eclipse-tractusx/portal-backend#1301
---------
Co-authored-by: Norbert Truchsess <norbert.truchsess@t-online.de>

--- a/docs/api/services-service.yaml
+++ b/docs/api/services-service.yaml
@@ -2275,6 +2275,7 @@ components:
         - AWAIT_SELF_DESCRIPTION_COMPANY_RESPONSE
         - RETRIGGER_AWAIT_SELF_DESCRIPTION_CONNECTOR_RESPONSE
         - RETRIGGER_AWAIT_SELF_DESCRIPTION_COMPANY_RESPONSE
+        - RETRIGGER_CONNECTOR_SELF_DESCRIPTION_WITH_OUTDATED_LEGAL_PERSON
       type: string
     ProviderSubscriptionDetailData:
       type: object
