--- a/src/administration/Administration.Service/appsettings.json
+++ b/src/administration/Administration.Service/appsettings.json
@@ -323,7 +323,8 @@
       "Scope": "",
       "TokenAddress": "",
       "SdFactoryUrl": "https://sdfactory.example.org/selfdescription",
-      "ClearinghouseConnectDisabled": false
+      "ClearinghouseConnectDisabled": false,
+      "ConnectorAllowSdDocumentSkipErrorCode": ""
     },
     "Dim": {
       "Username": "",
