--- a/src/processes/Processes.Worker/appsettings.json
+++ b/src/processes/Processes.Worker/appsettings.json
@@ -334,7 +334,8 @@
       "Scope": "",
       "TokenAddress": "",
       "SdFactoryUrl": "https://sdfactory.example.org/selfdescription",
-      "ClearinghouseConnectDisabled": false
+      "ClearinghouseConnectDisabled": false,
+      "ConnectorAllowSdDocumentSkipErrorCode": ""
     },
     "Clearinghouse":{
       "Username": "",
