--- a/docs/api/administration-service.yaml
+++ b/docs/api/administration-service.yaml
@@ -7709,6 +7709,7 @@ components:
         - AWAIT_SELF_DESCRIPTION_COMPANY_RESPONSE
         - RETRIGGER_AWAIT_SELF_DESCRIPTION_CONNECTOR_RESPONSE
         - RETRIGGER_AWAIT_SELF_DESCRIPTION_COMPANY_RESPONSE
+        - RETRIGGER_CONNECTOR_SELF_DESCRIPTION_WITH_OUTDATED_LEGAL_PERSON
       type: string
     ProviderDetailData:
       type: object
