--- a/docs/api/apps-service.yaml
+++ b/docs/api/apps-service.yaml
@@ -3696,6 +3696,7 @@ components:
         - AWAIT_SELF_DESCRIPTION_COMPANY_RESPONSE
         - RETRIGGER_AWAIT_SELF_DESCRIPTION_CONNECTOR_RESPONSE
         - RETRIGGER_AWAIT_SELF_DESCRIPTION_COMPANY_RESPONSE
+        - RETRIGGER_CONNECTOR_SELF_DESCRIPTION_WITH_OUTDATED_LEGAL_PERSON
       type: string
     SubscriberSubscriptionDetailData:
       type: object
