--- a/src/registration/Registration.Service/appsettings.json
+++ b/src/registration/Registration.Service/appsettings.json
@@ -37,7 +37,7 @@
     "PasswordResendAddress": ""
   },
   "BpnAccess": {
-    "BaseAddress": ""
+    "BaseAddress": "https://cofinity-x.com"
   },
   "Keycloak": {
     "central": {
@@ -101,13 +101,13 @@
     "UseDimWallet": false
   },
   "Hubspot": {
-    "BaseAddress": "",
-    "Username": "",
-    "Password": "",
-    "GrantType": "",
-    "ClientId": "",
-    "ClientSecret": "",
-    "Scope": "",
-    "TokenAddress": ""
+    "BaseAddress": "https://cofinity-x.com",
+    "Username": "test",
+    "Password": "test",
+    "GrantType": "test",
+    "ClientId": "test",
+    "ClientSecret": "te",
+    "Scope": "test",
+    "TokenAddress": "https://cofinity-x.com"
   }
 }
