--- a/.github/workflows/cfx_codeql.yml
+++ b/.github/workflows/cfx_codeql.yml
@@ -1,8 +1,8 @@
-name: CFX CodeQL Dotnet
+name: CFX Scheduled Weekly CodeQL Dotnet Scan
 
 on:
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "0 0 * * 0"
   workflow_dispatch:
   pull_request:
     branches:
